--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Global Connect</title>
+    <title>GlobalConnect — International Expansion</title>
+    <meta name="description" content="GlobalConnect helps companies expand internationally with market entry strategy, partnerships, and technology solutions.">
+    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS (CDN Link) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- Top Navbar with inline colors -->
+    <nav class="navbar navbar-expand-lg" style="background-color:#050066;">
+        <div class="container">
+            <a class="navbar-brand" href="#" style="color:#ffffff;">GlobalConnect</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+                style="border-color:#ffffff;">
+                <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#" style="color:#ffffff;">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services" style="color:#ffffff;">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about" style="color:#ffffff;">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact" style="color:#ffffff;">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main>
+        <section id="home" class="hero">
+            <div class="container">
+                <h1>Connecting Entrepreneurs Globally</h1>
+                <p class="lead">Raise capital, discover partners, and invest in ventures that inspire. One platform. Endless opportunities.</p>
+                <a class="btn primary" href="#services" style="background-color:#050066; color:#ffffff; border:none;">Get Started</a>
+            </div>
+        </section>
+
+        
+        </section>
+    </main>
+
+    <!-- Footer with matching inline color -->
+    <footer style="background-color:#050066; color:#ffffff; text-align:center; padding:1rem 0;">
+        <p>Copyright &#169; 2025 Global Connect.</p>
+    </footer>
+
+    <script src="script.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
